--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,10 +59,12 @@ flutter {
 }
 dependencies {
     // Import the Firebase BoM
-    implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
+    implementation (platform("com.google.firebase:firebase-bom:33.1.0"))
+    implementation 'com.google.firebase:firebase-auth'
 
 
     // TODO: Add the dependencies for Firebase products you want to use
     // When using the BoM, don't specify versions in Firebase dependencies
     // https://firebase.google.com/docs/android/setup#available-libraries
 }
+apply plugin: 'com.google.gms.google-services'
